--- a/index.html
+++ b/index.html
@@ -447,14 +447,14 @@
                                         <div class="media">
                                             <div class="image">
                                                 <a href="#">
-                                                    <img src="img/products/apparel4">
+                                                    <img src="img/products/apparel4.jpg">
                                                 </a>
                                             </div>
                                             <div class="hoverable">
                                                 <ul>
                                                     <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
-                                                    <li><a href=""><i class="ri-heart-line"></i></a></li>
-                                                    <li><a href=""><i class="ri-heart-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-shuffle-line"></i></a></li>
                                                 </ul>
                                             </div>
                                             <div class="discount circle flexcenter"><span>31%</span></div>
@@ -483,9 +483,9 @@
                                 <div class="row products mini">
                                     <div class="item">
                                         <div class="media">
-                                            <div class="image">
+                                            <div class="thumbnail object-cover">
                                                 <a href="#">
-                                                    <img src="img/products/shoe1">
+                                                    <img src="img/products/shoe1.jpg">
                                                 </a>
                                             </div>
                                             <div class="hoverable">
@@ -516,9 +516,9 @@
                                 <div class="row products mini">
                                     <div class="item">
                                         <div class="media">
-                                            <div class="image">
+                                            <div class="thumbnail object-cover">
                                                 <a href="#">
-                                                    <img src="img/products/apparel3">
+                                                    <img src="img/products/apparel3.jpg">
                                                 </a>
                                             </div>
                                             <div class="hoverable">
