--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Mega Sale!</h4>
-                                            <h3<span>Get your deal here</span><br>Living Room Chair</h3>
+                                            <h3><span>Get your deal here</span><br>Living Room Chair</h3>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
                                         <a href="#" class="over-link"></a>
@@ -691,7 +691,7 @@
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Mega Sale!</h4>
-                                            <h3<span>Discount everyday</span><br>Office Outfit</h3>
+                                            <h3><span>Discount everyday</span><br>Office Outfit</h3>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
                                         <a href="#" class="over-link"></a>
