--- a/backend/static/dashboard.html
+++ b/backend/static/dashboard.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <h1>
-            welcome
-        </h1>
-    </head>
+<head>
+  <title>Dashboard</title>
+</head>
+<body>
+  <h2>Welcome to the Dashboard</h2>
+  <!-- Rest of your dashboard content -->
+  <a href="/static/login.html">Go back to Login</a>
+</body>
 </html>
