--- a/backend/static/signup.html
+++ b/backend/static/signup.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
-  <link rel="stylesheet" type="text/css" href="/static/login.css?v=1">
+  <title>Signup</title>
+  <link rel="stylesheet" type="text/css" href="/static/signup.css?v=1">
 </head>
 <body>
   <div class="container">
-    <h2>Login</h2>
-    <form id="login-form">
+    <h2>Signup</h2>
+    <form id="signup-form">
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
@@ -16,14 +16,15 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
       </div>
+      <div class="form-group">
+        <label for="address">Address</label>
+        <input type="text" id="address" name="address" required>
+      </div>
       <div id="response-message"></div>
-      <button type="submit">Login</button>
+      <button type="submit">Signup</button>
     </form>
-    <div class="signup-link">
-      Don't have an account? <a href="/signup">Signup</a>
-    </div>
   </div>
 
-  <script src="/static/login.js"></script>
+  <script src="/static/signup.js"></script>
 </body>
 </html>
