--- a/page-offer.html
+++ b/page-offer.html
@@ -707,6 +707,7 @@
                                                 <span class="current">Rp 560.000</span>
                                                 <span class="normal-mini-text">Rp 750.000</span>
                                             </div>
+                                            <!-- data-stock is product stock-->
                                             <div class="stock mini-text" data-stock="4000">
                                                 <div class="qty">
                                                     <span>Sold: <strong class="qty-sold">998</strong></span>
