--- a/checkout.html
+++ b/checkout.html
@@ -725,6 +725,33 @@
             </div>
             <!--search bottom-->
 
+            <div id="modal" class="modal">
+                <div class="content flexcol">
+                    <div class="image object-cover">
+                        <img src="img/products/apparel4.jpg" alt="">
+                    </div>
+                    <h2>Get the latest deals and coupons</h2>
+                    <p class="mobile-hide">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid expedita, accusantium tenetur animi fuga ducimus?</p>
+                    <form action="" class="search">
+                        <span class="icon-large"><i class="ri-mail-line"></i></span>
+                        <input type="mail" placeholder="Your email address">
+                        <button>Subscribe</button>
+                    </form>
+                    <a href="#" class="mini-text"></a>Do not show me this again</a>
+                    <a href="#" class="t-close modalclose flexcenter">
+                        <i class="ri-close-line"></i>
+                    </a>
+                </div>
+            </div>
+            <!-- modal -->
+
+            <div class="backtotop">
+                <a href="#" class="flexcol">
+                    <i class="ri-arrow-up-line"></i>
+                    <span>Top</span>
+                </a>
+            </div>
+
             <div class="overlay"></div>
             
         </footer>
@@ -734,9 +761,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js"></script>
     <script src="scripts.js"></script>
     <script>
-        const FtoShow = '.filter';
+        <!-- const FtoShow = '.filter';
         const Fpopup = document.querySelector{FtoShow};
-        const FTrigger = document.querySelector('.filter-trigger');
+        const FTrigger = document.querySelector('.filter-trigger'); -->
 
         FTrigger.addEventListener('click', () =>{
             setTimeout(() => {
