--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
             <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
-                        <div class="left"></div>
+                        <div class="left">
                             <div class="ul flexitem main-links">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Featured Products</a></li>
                                 <li><a href="#">Wishlist</a></li>
                             </div>
+                        </div>
                         <div class="right">
                             <ul class="flexitem">
                                 <li class="main-links">
@@ -53,7 +54,7 @@
                                         <ul>
                                             <li class="current"><a href="#">English</a></li>
                                             <li><a href="#">Indonesia</a></li>
-                                            <li><a href="#">Chinesse</a></li>
+                                            <li><a href="#">Chinese</a></li>
                                             <li><a href="#">Melayu</a></li>
                                         </ul>
                                     </li>
@@ -103,11 +104,11 @@
                                                             <ul>
                                                                 <li><a href="#">Accessories</a></li>
                                                                 <li><a href="#">Bags & Purses</a></li>
-                                                                <li><a href="#"></a>Necklaces</li>
-                                                                <li><a href="#"></a>Ring</li>
-                                                                <li><a href="#"></a>Earrings</li>
-                                                                <li><a href="#"></a>Braclet</li>
-                                                                <li><a href="#"></a>Body Jewelry</li>
+                                                                <li><a href="#">Necklaces</a></li>
+                                                                <li><a href="#">Ring</a></li>
+                                                                <li><a href="#">Earrings</a></li>
+                                                                <li><a href="#">Braclet</a></li>
+                                                                <li><a href="#">Body Jewelry</a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
@@ -158,7 +159,7 @@
                                                                 <a href="#" class="primary-button">Order Now</a>
                                                             </div>
                                                         </div>
-                                                    </div>text-content
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -873,7 +874,7 @@
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Mega Sale!</h4>
-                                            <h3<span>Get your deal here</span><br>Living Room Chair</h3>
+                                            <h3><span>Get your deal here</span><br>Living Room Chair</h3>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
                                         <a href="#" class="over-link"></a>
@@ -886,7 +887,7 @@
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Mega Sale!</h4>
-                                            <h3<span>Discount everyday</span><br>Office Outfit</h3>
+                                            <h3><span>Discount everyday</span><br>Office Outfit</h3>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
                                         <a href="#" class="over-link"></a>
