--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <aside class="site-off desktop-hide">
             <div class="off-canvas canvas-head flexitem">
-                <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
+                <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
                 <a href="#" class="t-close flexcenter"><i class="ri-clone-line"></i></a>
             </div>
             <div class="departments"></div>
