--- a/cart.html
+++ b/cart.html
@@ -782,7 +782,7 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js"></script>
     <script src="scripts.js"></script>
-    <script>
+    <!-- <script>
         const FtoShow = '.filter';
         const Fpopup = document.querySelector{FtoShow};
         const FTrigger = document.querySelector('.filter-trigger');
@@ -802,6 +802,6 @@
                 Fpopup.classList.remove('show')
             }
         })
-    </script>
+    </script> -->
 </body>
 </html>
