--- a/page-offer.html
+++ b/page-offer.html
@@ -17,8 +17,8 @@
 
         <aside class="site-off desktop-hide">
             <div class="off-canvas canvas-head flexitem">
-                <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
-                <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
+                <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
+                <a href="#" class="t-close flexcenter"><i class="ri-clone-line"></i></a>
             </div>
             <div class="departments"></div>
             <nav></nav>
