--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="container">
                     <div class="wrapper flexitem">
                         <div class="left">
-                            <div class="ul flexitem main-links">
+                            <div class="flexitem main-links">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Featured Products</a></li>
                                 <li><a href="#">Wishlist</a></li>
@@ -570,7 +570,7 @@
                                                 <div class="stars"></div>
                                                 <span class="mini-text">(2,548)</span>
                                             </div>
-                                            <h3 class="main-links"><a href="#">Men Slip on Shoes Casual With Arch Support Insoles</a></h3>
+                                            <h3 class="main-links"><a href="http://127.0.0.1:3000/page-single.html">Men Slip on Shoes Casual With Arch Support Insoles</a></h3>
                                             <div class="price">
                                                 <span class="current">Rp 129.000</span>
                                                 <span class="normal mini-text">Rp 189.000</span>
