--- a/page-category.html
+++ b/page-category.html
@@ -29,7 +29,7 @@
             <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
-                        <div class="left"></div>
+                        <!-- <div class="left"></div>
                             <div class="ul flexitem main-links">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Featured Products</a></li>
@@ -60,7 +60,7 @@
                                     </li>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                                     </div>
                                 </a>
 
-                                <div class="mini-carts">
+                                <!-- <div class="mini-carts">
                                     <div class="content">
                                         <div class="cart-head">
                                             5 items in cart
@@ -262,7 +262,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 </li>
                             </ul>
                         </div>
