--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Shop</a></li>
                                     <li class="has-child">
-                                        <a href="#">Women
+                                        <a href="page-category.html">Women
                                             <div class="icon-small"><i class="ri-arrow-down-s-line"></i></div>
                                         </a>
                                         <div class="mega">
