--- a/checkout.html
+++ b/checkout.html
@@ -17,8 +17,8 @@
 
         <aside class="site-off desktop-hide">
             <div class="off-canvas canvas-head flexitem">
-                <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
-                <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
+                <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
+                <a href="#" class="t-close flexcenter"><i class="ri-clone-line"></i></a>
             </div>
             <div class="departments"></div>
             <nav></nav>
@@ -725,33 +725,6 @@
             </div>
             <!--search bottom-->
 
-            <div id="modal" class="modal">
-                <div class="content flexcol">
-                    <div class="image object-cover">
-                        <img src="img/products/apparel4.jpg" alt="">
-                    </div>
-                    <h2>Get the latest deals and coupons</h2>
-                    <p class="mobile-hide">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid expedita, accusantium tenetur animi fuga ducimus?</p>
-                    <form action="" class="search">
-                        <span class="icon-large"><i class="ri-mail-line"></i></span>
-                        <input type="mail" placeholder="Your email address">
-                        <button>Subscribe</button>
-                    </form>
-                    <a href="#" class="mini-text"></a>Do not show me this again</a>
-                    <a href="#" class="t-close modalclose flexcenter">
-                        <i class="ri-close-line"></i>
-                    </a>
-                </div>
-            </div>
-            <!-- modal -->
-
-            <div class="backtotop">
-                <a href="#" class="flexcol">
-                    <i class="ri-arrow-up-line"></i>
-                    <span>Top</span>
-                </a>
-            </div>
-
             <div class="overlay"></div>
             
         </footer>
@@ -761,9 +734,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js"></script>
     <script src="scripts.js"></script>
     <script>
-        <!-- const FtoShow = '.filter';
+        const FtoShow = '.filter';
         const Fpopup = document.querySelector{FtoShow};
-        const FTrigger = document.querySelector('.filter-trigger'); -->
+        const FTrigger = document.querySelector('.filter-trigger');
 
         FTrigger.addEventListener('click', () =>{
             setTimeout(() => {
