--- a/page-category.html
+++ b/page-category.html
@@ -17,8 +17,8 @@
 
         <aside class="site-off desktop-hide">
             <div class="off-canvas canvas-head flexitem">
-                <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
-                <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
+                <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
+                <a href="#" class="t-close flexcenter"><i class="ri-clone-line"></i></a>
             </div>
             <div class="departments"></div>
             <nav></nav>
@@ -29,7 +29,7 @@
             <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
-                        <!-- <div class="left"></div>
+                        <div class="left"></div>
                             <div class="ul flexitem main-links">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Featured Products</a></li>
@@ -60,7 +60,7 @@
                                     </li>
                                 </li>
                             </ul>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                                     </div>
                                 </a>
 
-                                <!-- <div class="mini-carts">
+                                <div class="mini-carts">
                                     <div class="content">
                                         <div class="cart-head">
                                             5 items in cart
@@ -262,7 +262,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                                 </li>
                             </ul>
                         </div>
@@ -1206,7 +1206,7 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js"></script>
     <script src="scripts.js"></script>
-    <!-- <script>
+    <script>
         const FtoShow = '.filter';
         const Fpopup = document.querySelector{FtoShow};
         const FTrigger = document.querySelector('.filter-trigger');
@@ -1226,6 +1226,6 @@
                 Fpopup.classList.remove('show')
             }
         })
-    </script> -->
+    </script>
 </body>
 </html>
