--- a/page-category.html
+++ b/page-category.html
@@ -72,10 +72,10 @@
                             <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
-                                    <li><a href="#">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="#">Shop</a></li>
                                     <li class="has-child">
-                                        <a href="#">Women
+                                        <a href="">Women
                                             <div class="icon-small"><i class="ri-arrow-down-s-line"></i></div>
                                         </a>
                                         <div class="mega">
@@ -190,7 +190,7 @@
                                     </div>
                                 </a>
 
-                                <div class="mini-carts">
+                                <!-- <div class="mini-carts">
                                     <div class="content">
                                         <div class="cart-head">
                                             5 items in cart
@@ -262,7 +262,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 </li>
                             </ul>
                         </div>
@@ -693,7 +693,7 @@
                                         <!--products category structure-->
 
                                         
-                                    <div class="item">
+                                    <!-- <div class="item">
                                         <div class="media">
                                             <div class="thumbnail object-cover">
                                                 <a href="#">
@@ -720,7 +720,7 @@
                                                 <span class="normal-mini-text">Rp 750.000</span>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="item">
                                         <div class="media">
                                             <div class="thumbnail object-cover">
@@ -798,14 +798,14 @@
                                                 <div class="stars"></div>
                                                 <span class="mini-text">(10)</span>
                                             </div>
-                                            <h3><a href="#">Womens Summer Boho Floral </a></h3>
+                                            <h3><a href="page-offer.html">Womens Summer Boho Floral </a></h3>
                                             <div class ="price">
                                                 <span class="current">Rp 129.000</span>
                                                 <span class="normal-mini-text">Rp 189.000</span>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="item">
+                                    <!-- <div class="item">
                                         <div class="media">
                                             <div class="thumbnail object-cover">
                                                 <a href="#">
@@ -832,7 +832,7 @@
                                                 <span class="normal-mini-text">Rp 1.119.000</span>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="item">
                                         <div class="media">
                                             <div class="thumbnail object-cover">
