--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                                                 <div class="starts"></div>
                                                 <span class="mini-text">(2,548)</span>
                                             </div>
-                                            <h3 class="main-links"><a href="#">Happy Sailed Womens Summer Boho Floral</a></h3>
+                                            <h3 class="main-links"><a href="page-offer.html">Happy Sailed Womens Summer Boho Floral</a></h3>
                                             <div class="price">
                                                 <span class="current">Rp 129.000</span>
                                                 <span class="normal mini-text">Rp 189.000</span>
