--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Shop</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.html"></a></li>
                                     <li class="has-child">
                                         <a href="page-category.html">Women
                                             <div class="icon-small"><i class="ri-arrow-down-s-line"></i></div>
