--- a/page-single.html
+++ b/page-single.html
@@ -71,10 +71,10 @@
                             <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Shop</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Shop</a></li>
                                     <li class="has-child">
-                                        <a href="#">Women
+                                        <a href="page-category.html">Women
                                             <div class="icon-small"><i class="ri-arrow-down-s-line"></i></div>
                                         </a>
                                         <div class="mega">
