--- a/page-category.html
+++ b/page-category.html
@@ -17,7 +17,7 @@
 
         <aside class="site-off desktop-hide">
             <div class="off-canvas canvas-head flexitem">
-                <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
+                <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
                 <a href="#" class="t-close flexcenter"><i class="ri-clone-line"></i></a>
             </div>
             <div class="departments"></div>
@@ -69,7 +69,7 @@
                     <div class="wrapper flexitem">
                         <a href="#" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
                         <div class="left">
-                            <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
+                            <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
                                     <li><a href="index.html">Home</a></li>
