--- a/page-single.html
+++ b/page-single.html
@@ -68,7 +68,7 @@
                     <div class="wrapper flexitem">
                         <a href="#" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
                         <div class="left">
-                            <div class="logo"><a href="/"><span class="circle">.Store</span></a></div>
+                            <div class="logo"><a href="/"><span class="circle">.Sagara</span></a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
                                     <li><a href="index.html">Home</a></li>
