--- a/checkout.html
+++ b/checkout.html
@@ -53,7 +53,7 @@
                                         <ul>
                                             <li class="current"><a href="#">English</a></li>
                                             <li><a href="#">Indonesia</a></li>
-                                            <li><a href="#">Chinesse</a></li>
+                                            <li><a href="#">Chinese</a></li>
                                             <li><a href="#">Melayu</a></li>
                                         </ul>
                                     </a> 
