--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                     <div class="icon-large"><i class="ri-heart-line"></i></div>
                                     <div class="fly-item"><span class="item-number">0</span></div>
                                 </a></li>
-                                <li><a href="#" class="iscart">
+                                <li><a href="cart.html" class="iscart">
                                     <div class="icon-large">
                                         <i class="ri-shopping-cart-line"></i>
                                         <div class="fly-item"><span class="item-number">0</span></div>
@@ -570,7 +570,7 @@
                                                 <div class="stars"></div>
                                                 <span class="mini-text">(2,548)</span>
                                             </div>
-                                            <h3 class="main-links"><a href="http://127.0.0.1:3000/page-single.html">Men Slip on Shoes Casual With Arch Support Insoles</a></h3>
+                                            <h3 class="main-links"><a href="page-single.html">Men Slip on Shoes Casual With Arch Support Insoles</a></h3>
                                             <div class="price">
                                                 <span class="current">Rp 129.000</span>
                                                 <span class="normal mini-text">Rp 189.000</span>
@@ -707,7 +707,7 @@
                                                 <div class="stars"></div>
                                                 <span class="mini-text">(3,459)</span>
                                             </div>
-                                            <h3><a href="#">Happy Sailed Womens Summer Boho Floral </a></h3>
+                                            <h3><a href="#">Black Women's Coat Dress </a></h3>
                                             <div class ="price">
                                                 <span class="current">Rp 899.000</span>
                                                 <span class="normal-mini-text">Rp 999.999</span>
@@ -735,7 +735,7 @@
                                                 <div class="stars"></div>
                                                 <span class="mini-text">(10)</span>
                                             </div>
-                                            <h3><a href="#">Womens Summer Boho Floral </a></h3>
+                                            <h3><a href="page-offer.html">Womens Summer Boho Floral </a></h3>
                                             <div class ="price">
                                                 <span class="current">Rp 129.000</span>
                                                 <span class="normal-mini-text">Rp 189.000</span>
@@ -763,7 +763,7 @@
                                                 <div class="stars"></div>
                                                 <span class="mini-text">(1,955)</span>
                                             </div>
-                                            <h3><a href="#">Men Slip on Shoes Casual With Arch Support Insoles</a></h3>
+                                            <h3><a href="page-single.html">Men Slip on Shoes Casual With Arch Support Insoles</a></h3>
                                             <div class ="price">
                                                 <span class="current">Rp 890.000</span>
                                                 <span class="normal-mini-text">Rp 1.119.000</span>
@@ -791,7 +791,7 @@
                                                 <div class="stars"></div>
                                                 <span class="mini-text">(1,237)</span>
                                             </div>
-                                            <h3><a href="#">Skechers Women's Go Joy Walking Shoe Sneakers</a></h3>
+                                            <h3><a href="page-single 2.html">Skechers Women's Go Joy Walking Shoe Sneakers</a></h3>
                                             <div class ="price">
                                                 <span class="current">Rp 450.000</span>
                                                 <span class="normal-mini-text">Rp 640.000</span>
@@ -995,7 +995,7 @@
                                     <h4>Help & Contact</h4>
                                     <ul class="flexcol">
                                         <li><a href="#">Your Account</a></li>
-                                        <li><a href="#">Your Orders</a></li>
+                                        <li><a href="cart.html">Your Orders</a></li>
                                         <li><a href="#">Shipping Rates</a></li>
                                         <li><a href="#">Returns</a></li>
                                         <li><a href="#"></a>Assistants</li>
@@ -1102,7 +1102,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#0">
+                                    <a href="#">
                                         <i class="ri-shopping-chart-line"></i>
                                         <span>Cart</span>
                                         <div class="fly-item">
