--- a/cart.html
+++ b/cart.html
@@ -408,7 +408,7 @@
                     <div class="wrapper"> 
                         <div class="breadcrumb">
                             <ul class="flexitem">
-                                <li><a href="#">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li>Cart</li>
                             </ul>
                         </div>
@@ -598,7 +598,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <a href="/checkout" class="secondary-button">Checkout</a>
+                                            <a href="checkout.html" class="secondary-button">Checkout</a>
                                         </div>
                                     </div>
                                 </div>
