--- a/checkout.html
+++ b/checkout.html
@@ -190,7 +190,7 @@
                                     </div>
                                 </a>
 
-                                <div class="mini-carts">
+                                <!-- <div class="mini-carts">
                                     <div class="content">
                                         <div class="cart-head">
                                             5 items in cart
@@ -262,7 +262,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 </li>
                             </ul>
                         </div>
