--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <p class="mini-text">Copyright 2022 © .Store. All right reserved.</p>
+                        <p class="mini-text">Copyright 2022 © .Sagara. All right reserved.</p>
                     </div>
                 </div>
             </div>
