--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
-                        <div class="left">
+                        <!-- <div class="left">
                             <div class="flexitem main-links">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Featured Products</a></li>
                                 <li><a href="#">Wishlist</a></li>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="right">
                             <ul class="flexitem">
                                 <li class="main-links">
