--- a/backend/static/cart.html
+++ b/backend/static/cart.html
@@ -29,12 +29,12 @@
             <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
-                        <div class="left"></div>
+                        <!-- <div class="left"></div>
                             <div class="ul flexitem main-links">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Featured Products</a></li>
                                 <li><a href="#">Wishlist</a></li>
-                            </div>
+                            </div> -->
                         <div class="right">
                             <ul class="flexitem">
                                 <li class="main-links">
@@ -697,7 +697,7 @@
                     <div class="wrapper">
                         <div class="flexcol">
                             <div class="logo">
-                                <a href=""><span class="circle">.Store</span></a>
+                                <a href=""><span class="circle">.Sagara</span></a>
                             </div>
                             <div class="socials">
                                 <ul class="flexitem">
@@ -709,7 +709,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <p class="mini-text">Copyright 2022 © .Store. All right reserved.</p>
+                        <p class="mini-text">Copyright 2022 © .Sagara. All right reserved.</p>
                     </div>
                 </div>
             </div>
