--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -1054,7 +1054,7 @@
                     <div class="wrapper">
                         <div class="flexcol">
                             <div class="logo">
-                                <a href=""><span class="circle">.Store</span></a>
+                                <a href=""><span class="circle">.Sagara</span></a>
                             </div>
                             <div class="socials">
                                 <ul class="flexitem">
